--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "cross-env NODE_ENV=production webpack --progress --hide-modules"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "vue": "^2.5.11",
+    "vue-router": "^3.3.2",
     "vuetify": "^2.2.32"
   },
   "browserslist": [
