--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "axios": "^0.19.2",
     "vue": "^2.5.11",
     "vue-router": "^3.3.2",
-    "vuetify": "^2.2.32"
+    "vuetify": "^2.2.32",
+    "vuex": "^3.4.0"
   },
   "browserslist": [
     "> 1%",
