--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "axios": "^0.19.2",
     "vue": "^2.5.11",
     "vue-router": "^3.3.2",
+    "vue-zoomer": "^0.3.6",
     "vuetify": "^2.2.32",
     "vuex": "^3.4.0"
   },
